@@ -1,0 +1,31 @@
+---
+version: 2.0.0
+checks:
+  oval:com.puppet.forge.simp.pki.auditd:
+    settings:
+      parameter: pki::auditd
+      value: true
+    type: puppet-class-parameter
+    controls:
+      nist_800_53_rev4:AU-3:2: true
+      nist_800_53_rev4:AU-4:1: true
+      nist_800_53_rev4:AU-9: true
+      disa_stig: true
+      RHEL-07-030010: true
+      SRG-OS-000038-GPOS-00016: true
+      SRG-OS-000039-GPOS-00017: true
+      SRG-OS-000042-GPOS-00021: true
+      cci:CCI-000131: true
+      cci:CCI-000126: true
+    identifiers:
+      nist_800_53_rev4:
+      - AU-3:2
+      - AU-4:1
+      - AU-9
+      disa_stig:
+      - RHEL-07-030010
+      - SRG-OS-000038-GPOS-00016
+      - SRG-OS-000039-GPOS-00017
+      - SRG-OS-000042-GPOS-00021
+      - CCI-000131
+      - CCI-000126
