@@ -1,3 +1,6 @@
+* Thu Jun 06 2019 Steven Pritchard <steven.pritchard@onypoint.com> - 6.1.2-0
+- Add v2 compliance_markup data
+
 * Fri Jan 25 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.1-0
 - Moved temporary aggregate CA certs reference files used by
   pki_cert_sync out of the target directory. These temporary
